# ImgProcSupport

./: .gitignore  GUI.py  GUI.ui  LICENSE  Readme.md  main.py  pyproject.toml  requirements.txt
cfg/: SWCon.cfg  main.toml
cfg/command/: SWCon.cfg
lang/: en.toml  jp.toml
